--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,7 @@ title                    : "Today I Learned"
 title_separator          : "-"
 name                     : "Subin"
 description              : "Post what I learned"
-url                      : "https://sub2n.github.io/blog2/."
+url                      : "https://sub2n.github.io/blog2/"
 baseurl                  : ""
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
