--- a/_config.yml
+++ b/_config.yml
@@ -20,8 +20,8 @@ title                    : "Today I Learned"
 title_separator          : "-"
 name                     : "Subin"
 description              : "Post what I learned"
-url                      : "https://sub2n.github.io/blog2/"
-baseurl                  : ""
+url                      : "https://sub2n.github.io"
+baseurl                  : "/blog2"
 repository               : # GitHub username/repo-name e.g. "mmistakes/minimal-mistakes"
 teaser                   : # path of fallback teaser image, e.g. "/assets/images/500x300.png"
 logo                     : # path of logo image to display in the masthead, e.g. "/assets/images/88x88.png"
